<resources>

    //Progress Dialog
    <string name="text_progress">Загрузка…</string>

    //Disconnect Dialog
    <string name="text_disconnection">Нет подключения к интернету!</string>
    <string name="text_check_internet">Проверьте подключение вашего устройства к Wi-Fi или мобильной сети.</string>

    //Readme
    <string name="text_about">Информация о приложении</string>
    <string name="text_version">Версия: 1.0</string>
    <string name="text_aboutApp1">Откройте для себя город с необычной стороны!</string>
    <string name="text_aboutApp2">Гик (от англ. geek, "чудик") - в современном понимании человек, глубоко увлеченный популярной культурой (комиксы, кинематограф, анимация, видеоигры, фэнтези и т.д.). Термин, объединяющий в себе и геймеров, и отаку, и кидалтов, и косплееров. Данное приложение поможет каждому гику найти места по вкусу!</string>
    <string name="text_host1">Вы проводите тематические фестивали или являетесь владелецем  необычного магазина, кафе или другого гик-места</string>
    <string name="text_host2">и хотите чтобы оно появилось здесь?</string>
    <string name="text_contact_us2">Напишите нам:</string>
    <string name="text_contact_us3">geekway_hosts@gmail.com</string>
    <string name="button_ok">Ок</string>

    //Nav_menu
    <string name="text_main">Главная</string>
    <string name="text_list">Места</string>
    <string name="text_map">Карта</string>
    <string name="text_profile">Профиль</string>

    //EnterActivity
    <string name="app_name">GeekWay</string>
    <string name="app_nameApp">GeekWaySPB</string>
    <string name="app_logo">AppLogo</string>
    <string name="app_name1">Geek</string>
    <string name="app_name2">Way</string>
    <string name="text_enter">Авторизация</string>
    <string name="editText_email_enter">E-mail</string>
    <string name="editText_password_enter">Пароль</string>
    <string name="button_enter">Войти</string>
    <string name="text_enter_forgotpassword">Забыли пароль?</string>
    <string name="text_havenot_account">У вас еще нет аккаунта? Пройдите регистрацию</string>
    <string name="button_registration">Регистрация</string>
    <string name="text_readme"><u>О приложении</u></string>

    //RegistrationActivity
    <string name="text_registration">Регистрация</string>
    <string name="editText_user_name">Ваше имя</string>
    <string name="editText_email">Ваш E-mail</string>
    <string name="editText_password">Придумайте пароль</string>
    <string name="editText_password_confirm">Подтвердите пароль</string>
    <string name="button_registration_account">Создать профиль</string>
    <string name="text_activate_account">У вас уже есть аккаунт? Прйдите авторизацию</string>
    <string name="button_enter_account">Войти</string>

    //ForgotPassword
    <string name="text_forgot_password">Восстановление пароля</string>
    <string name="text_enter_email_forgot_password1">Введите адресс электронной почты вашего профиля.</string>
    <string name="text_enter_email_forgot_password2">На него будет отправлена ссылка для восстановления пароля.</string>
    <string name="editText_email_forgot_password">E-mail</string>
    <string name="button_forgot_password_submit">Отправить</string>
    <string name="button_forgot_password_cancel">Отмена</string>

    //Settings
    <string name="text_settings">Настройки</string>
    <string name="editText_name_settings">Имя пользователя</string>
    <string name="editText_email_settings">E-mail пользователя</string>
    <string name="editText_passconf_settings">Пароль для подтверждения</string>
    <string name="text_reset_password_settings">Изменить пароль</string>
    <string name="button_save_settings">Сохранить</string>
    <string name="button_cancel_settings">Отмена</string>

    //ResetPassword
    <string name="text_reset_password">Изменить пароль</string>
    <string name="editText_resetpass_oldpass">Старый пароль</string>
    <string name="editText_resetpass_newpass">Новый пароль</string>
    <string name="editText_resetpass_confnewpass">Подтвердите пароль</string>
    <string name="button_save_resetpassword">Сохранить</string>
    <string name="button_cancel_resetpassword">Отмена</string>

    //AdminActivity
    <string name="text_admin">Администратор</string>
    <string name="text_admin_name">Имя:</string>
    <string name="text_admin_email">E-mail:</string>
    <string name="button_admin_database">Список городов</string>
    <string name="button_admin_bdplaces">Список мест</string>
    <string name="button_admin_settings">Настройки пользователя</string>
    <string name="button_admin_exit">Выйти</string>
    <string name="text_admin_readme"><u>О приложении</u></string>

    //DataBaseActivity
    <string name="text_database">Список городов</string>
    <string name="editText_city_search">Поиск города…</string>
    <string name="button_add_city">Добавить город</string>
    <string name="button_cancel_database">Назад</string>

    //CategoriesActivity
    <string name="text_categories">Категории</string>
    <string name="editText_category_search">Поиск категории…</string>
    <string name="button_add_category">Добавить категорию</string>
    <string name="button_add_place">Добавить место</string>
    <string name="button_cancel_categories">Назад</string>

    //PlacesActivity
    <string name="text_places">Места</string>
    <string name="editText_place_search">Поиск места…</string>
    <string name="button_cancel_places">Назад</string>

    //EditPlaceActivity
    <string name="text_editplace">Изменить место</string>
    <string name="text_editphoto_place">Фотография места (нажмите, чтобы добавить новую)</string>
    <string name="button_save_editplace">Сохранить</string>
    <string name="button_cancel_editplace">Отмена</string>

    //AddCategoryActivity
    <string name="text_add_category">Добавить категорию</string>
    <string name="button_cancel_addcategory">Отмена</string>
    <string name="editText_category_name">Название категории</string>

    //AddPlaceActivity
    <string name="text_add_place">Добавить место</string>
    <string name="button_cancel_addplace">Отмена</string>
    <string name="editText_place_name">Название места</string>
    <string name="editText_place_age">Возрастное ограничение</string>
    <string name="editText_place_description">Описание места</string>
    <string name="editText_place_address">Адрес (при наличии)</string>
    <string name="editText_place_web">Сайт (при наличии)</string>
    <string name="editText_place_public">ВКонтакте (при наличии)</string>
    <string name="editText_place_time">Режим работы (при наличии)</string>
    <string name="editText_place_telephone">Телефон (при наличии)</string>
    <string name="editText_place_lat">Lat (при наличии)</string>
    <string name="editText_place_lng">Lng (при наличии)</string>
    <string name="text_photo_place">Фотография места (нажмите, чтобы добавить)</string>

    //AddCityActivity
    <string name="text_add_city">Добавить город</string>
    <string name="button_add">Добавить</string>
    <string name="button_cancel_addcity">Отмена</string>
    <string name="editText_city_name">Название города</string>
    <string name="text_photo_city">Фотография города (нажмите, чтобы добавить)</string>
    <string name="editText_city_description">Описание города</string>

    //PlaceDetailsActivity
    <string name="button_cancel_placedetails">Назад к списку</string>
    <string name="text_place_age">Возрастное ограничение:</string>
    <string name="text_place_category">Категория:</string>
    <string name="text_place_city">Город:</string>
    <string name="text_place_TA">Адрес и режим работы:</string>
    <string name="text_place_address">Адрес:</string>
    <string name="text_place_time">Режим работы:</string>
    <string name="text_place_contacts">Контакты:</string>
    <string name="text_place_public">ВКонтакте:</string>
    <string name="text_place_web">Веб-сайт:</string>
    <string name="text_place_telephone">Телефон:</string>
    <string name="text_place_comments">Комментарии:</string>

    //Add Comment Dialog
    <string name="text_add_comment">Комментарий</string>
    <string name="editText_add_comment">Введите комментарий…</string>
    <string name="button_add_comment">Добавить</string>

    //Profile
    <string name="text_user">Профиль</string>
    <string name="text_user_name">Имя:</string>
    <string name="text_user_email">E-mail:</string>
    <string name="button_favorites">Избранное</string>
    <string name="button_user_settings">Настройки</string>
    <string name="button_user_exit">Выйти</string>
    <string name="button_readme">О приложении</string>

    //Favorites
    <string name="text_favorites">Избранное</string>
    <string name="button_close_favorites">Назад</string>

    //Main
    <string name="text_mainpage">Главная</string>

    //Map
    <string name="text_search">Адрес места…</string>

    //CityDetails
    <string name="button_cancel_citydetails">Назад к списку</string>
    <string name="button_translate_citydetails">Перевести</string>
    <string name="button_translate_placedetails">Перевести описание</string>

    <string name="editcyty_text">Изменить город</string>
    <string name="editcategory_text">Изменить категорию</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>