<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".EnterActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:srcCompat="@drawable/geekway_logo" />

    <TextView
        android:id="@+id/app_name1"
        android:layout_width="153dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/app_name1"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <TextView
        android:id="@+id/app_name2"
        android:layout_width="108dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/app_name2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toBottomOf="@+id/app_name1" />

    <TextView
        android:id="@+id/textEnter"
        android:layout_width="225dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/text_enter"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16" />

    <EditText
        android:id="@+id/editTextEmailEnter"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/editText_email_enter"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEnter" />

    <EditText
        android:id="@+id/editTextPasswordEnter"
        android:imeOptions="flagForceAscii"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:autofillHints="editPassword"
        android:drawableStart="@drawable/custom_key_icon"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/editText_password_enter"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailEnter" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/button_enter"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordEnter" />

    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/oswald"
        android:shadowColor="@color/grey"
        android:text="@string/text_enter_forgotpassword"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnter" />

    <TextView
        android:id="@+id/textHaveNotAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/oswald"
        android:text="@string/text_havenot_account"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/button_registration"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textReadme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textReadme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/oswald"
        android:shadowColor="@color/grey"
        android:text="@string/text_readme"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.49" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>