<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegistrationActivity">

    <FrameLayout
        android:id="@+id/frameNameLogo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageWhiteScreen"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:contentDescription="image"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/geekway_whitescreen" />

        <ImageView
            android:id="@+id/imageNameLogo"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:contentDescription="image"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.555"
            app:srcCompat="@drawable/geekway_logoname" />

    </FrameLayout>

    <TextView
        android:id="@+id/textRegistration"
        android:layout_width="264dp"
        android:layout_height="22dp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/text_registration"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameNameLogo" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="userName"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_account_box_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/editText_user_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegistration" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/editText_email"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:imeOptions="flagForceAscii"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:autofillHints="editPassword"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/editText_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextPasswordConfirm"
        android:imeOptions="flagForceAscii"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:autofillHints="editConfPass"
        android:drawableStart="@drawable/custom_key_icon"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/editText_password_confirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonRegistrationAccount"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/button_registration_account"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordConfirm" />

    <TextView
        android:id="@+id/textHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/oswald"
        android:text="@string/text_activate_account"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEnterAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEnterAccount"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/button_enter_account"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>