<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="28dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/textAddComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/press_start_2p"
        android:padding="10dp"
        android:text="@string/text_add_comment"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <EditText
        android:id="@+id/editComment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/btnBack"
        android:layout_marginTop="15dp"
        android:autofillHints="userName"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_comment_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/editText_add_comment"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAddComment" />

    <Button
        android:id="@+id/buttonAddComment"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editComment"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/button_add_comment"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editComment" />

</androidx.constraintlayout.widget.ConstraintLayout>